--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tax Calculator</title>
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
+  <main class="container">
     <div class="calculator-card">
-      <div class="header">
+      <header class="header">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="calculator-icon">
           <rect width="16" height="20" x="4" y="2" rx="2"></rect>
           <line x1="8" x2="16" y1="6" y2="6"></line>
@@ -24,33 +27,36 @@
           <path d="M8 18h.01"></path>
         </svg>
         <h1>Tax Calculator</h1>
-      </div>
+      </header>
 
       <div class="input-section">
-        <label for="income">Gross Income (Annual)</label>
-        <div class="input-wrapper">
-          <span class="currency-symbol">€</span>
-          <input type="text" id="income" placeholder="Enter your gross income" aria-label="Annual gross income">
+        <div class="floating-label-group">
+          <div class="input-container">
+            <span class="currency-symbol">€</span>
+            <input type="text" id="income" placeholder="Annual Gross Income" aria-label="Annual gross income">
+          </div>
         </div>
       </div>
 
       <div class="results-section">
-        <div class="result-item">
-          <span class="label">Effective Tax Rate:</span>
-          <span class="value" id="taxRate">0%</span>
-        </div>
-        <div class="result-item">
-          <span class="label">Tax Amount:</span>
-          <span class="value" id="taxAmount">€0,00</span>
-        </div>
-        <div class="result-item net-income">
-          <span class="label">Net Income:</span>
-          <span class="value" id="netIncome">€0,00</span>
+        <div class="result-card">
+          <div class="result-item">
+            <span class="label">Effective Tax Rate</span>
+            <span class="value" id="taxRate">0%</span>
+          </div>
+          <div class="result-item">
+            <span class="label">Tax Amount</span>
+            <span class="value" id="taxAmount">€0,00</span>
+          </div>
+          <div class="result-item highlight">
+            <span class="label">Net Income</span>
+            <span class="value" id="netIncome">€0,00</span>
+          </div>
         </div>
       </div>
 
-      <div class="tax-brackets">
-        <p class="section-title">Tax Brackets</p>
+      <section class="tax-brackets">
+        <h2 class="section-title">Tax Brackets</h2>
         <div class="table-wrapper">
           <table>
             <thead>
@@ -63,9 +69,9 @@
             <tbody id="taxBracketsBody"></tbody>
           </table>
         </div>
-      </div>
+      </section>
     </div>
-  </div>
+  </main>
   <script src="script.js"></script>
 </body>
 </html>
